# EPO-4-Smart-Car

./: .gitignore  CPUvGPU.m  C_nav_test.m  CarControl.m  Ch2TDOA.m  CommunicationTest.m  ControlKitt.m  DelayMeasurement.m  Diameter2SteerDirection.m  EPOCommunications.mexw64  FiveMicCalc.m  KITTBrake.m  KITTDynamicsFinal.slx  KITTDynamicsRun.m  KITTDynamics_figure.fig  KITTParameters.m  KITTPathFinding.m  KITTRoute.m  KITTVelocity.m  KITTfield.m  MDS_rotate.m  PathFinding_RAW.m  README.md  ROUTE_main.m  RecordLive.m  Sensor_variance.m  SteeringDirectionFit.fig  TwoMicTetst.m  WhatIsALiveScript.mlx  audio_measure.m  audiodata_96k2.mat  audiodata_A11.mat  audiodata_A11_2.mat  audiodata_reference.mat  audiodata_reference2.mat  audiodata_reference3.mat  audiodata_throw_away.mat  calcSpeed.m  calcVirtualPos.m  cancer.m  (+40 more)
C-pathfinder/: CMakeLists.txt  Notes on the compiler.txt  main.cpp  mex_C++_mingw-w64.xml  mex_C++_mingw-w64_7.1.xml
Figures/: CH2_CH3_comparison.fig  InfoGraphic.ai  Report_B_recording.fig  midterm_3m_distance.fig  midterm_3m_fit.fig  midterm_3m_speed.fig  object_avoidance_with.fig  object_avoidance_without.fig  report_B_channel.fig  report_B_location.fig  speed_estimation_old.fig  vanAnaarBeter.fig
GPU tests/: CPUvGPU.m  performance_test.m
Localization/: Ch2TDOA.m  FiveMicCalc.m  RecordLive.m  TwoMicTetst.m  ch2.m  channelEst.m  h_peak_finder.m  live_TDOA_test.m  report_17_audio_beacon.m  tdoa2.m
MAThfinding/: KITTPathFinding.m  KITTRoute.m  KITTfield.m  PathFinding_RAW.m  ROUTE_main.m  state_forward.m
Midterm/: CommunicationTest.m  Sensor_variance.m  (+5 more)
(+54 files in other folders)
